# chardetng-py

./: .cookiecutter.json  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
bench/: bench.py  compare.py
chardetng_docs/: EncodingDetector.md  README.md  feed.md  guess.md  guess_assess.md
chardetng_py/: __init__.py  _rust.pyi  api.py  compat.py
docs/: advanced_usage.md  class_reference.md  class_reference.rst  codeofconduct.rst  conf.py  contributing.rst  index.md  index.rst  license.rst  recipes.md  recipes.rst  reference.md  requirements.txt  shortcuts.md  shortcuts.rst  usage.md  usage.rst
python/chardetng_py/: __init__.py  _rust.pyi  api.py  compat.py  constants.py  detector.pyi  shortcuts.py
src/: lib.rs
tests/: __init__.py  test_decode.py
