[package]
name = "chardetng_py"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chardetng_py"
crate-type = ["cdylib"]

[dependencies]
chardetng = "0.1.17"
pyo3 = "0.18.3"

[profile.release]
lto = true
codegen-units = 1
