[package]
name = "chardetng_py"
version = "0.3.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chardetng_py"
crate-type = ["cdylib"]

[dependencies]
chardetng = "0.1.17"
pyo3 = { version = "0.25.0", features = ["extension-module"] }

[profile.release]
lto = true
codegen-units = 1
