[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "chardetng_py"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"

[project.urls]
homepage = "https://github.com/john-parton/chardetng-py"
repository = "https://github.com/john-parton/chardetng-py"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "chardetng_py._rust"