[project]
name = "chardetng_py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"

[project.urls]
homepage = "https://github.com/john-parton/chardetng-py"
documentation = "https://chardetng-py.readthedocs.io"
changelog = "https://github.com/john-parton/chardetng-py/releases"

[tool.poetry]
name = "chardetng-py"
version = "0.3.3"
description = "chardetng Python Module"
authors = ["John Parton <john.parton.iv@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/john-parton/chardetng-py"
repository = "https://github.com/john-parton/chardetng-py"
documentation = "https://chardetng-py.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
Changelog = "https://github.com/john-parton/chardetng-py/releases"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
numpydoc = "^1.5.0"
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
furo = ">=2021.11.12"
mypy = ">=0.930"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
ruff = "^0.0.292"
sphinx-toolbox = "^3.5.0"
maturin = "^1.3.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["chardetng_py", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.ruff]
line-length = 88
select = ["ALL"]

[tool.ruff.per-file-ignores]
# Ignore 'Use of assert detected' in tests
"tests/*.py" = ["S101"]
"python/chardetng_py/detector.pyi" = ["D102"]


[tool.ruff.mccabe]
max-complexity = 10

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "chardetng_py.detector"
python-source = "python"
strip = true
