[project]
name = "chardetng_py"
version = "0.3.4"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"

[project.urls]
homepage = "https://github.com/john-parton/chardetng-py"
documentation = "https://chardetng-py.readthedocs.io"
changelog = "https://github.com/john-parton/chardetng-py/releases"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["chardetng_py", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Ignore 'Use of assert detected' in tests
"tests/*.py" = ["S101"]
"python/chardetng_py/detector.pyi" = ["D102"]


[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "coverage[toml]>=7.6.1",
    "furo>=2024.8.6",
    "maturin>=1.9.1",
    "mypy>=1.14.1",
    "numpydoc>=1.7.0",
    "pre-commit>=3.5.0",
    "pre-commit-hooks>=5.0.0",
    "pygments>=2.19.2",
    "pytest>=8.3.5",
    "ruff>=0.12.5",
    "safety>=3.6.0",
    "sphinx>=7.1.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-toolbox>=4.0.0",
    "typeguard>=4.4.0",
    "xdoctest[colors]>=1.2.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "chardetng_py.detector"
python-source = "python"
strip = true
